# aap-proxy-rs

./: .gitignore  Cargo.toml  allowlist.txt  main.rs
client/: Cargo.toml
client-arena/: Cargo.toml
client-arena/src/: arena.rs  lib.rs  rest.rs  soap.rs
client/src/: arena.rs
domain/: Cargo.toml
domain/src/api/: mod.rs
server/: Cargo.toml
server/src/: axum.rs  lib.rs  proxy.rs  routes.rs  utils.rs
