[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy-rs"
path = "main.rs"

[workspace]
members = ["client", "domain", "server"]

[workspace.dependencies]
client = { path = "client" }
domain = { path = "domain" }
server = { path = "server" }

axum = "0.6.18" # web app framework
hyper = { version ="0.14.26", features = ["full"] } # HTTP impl
tokio = { version = "1.28.1", features = ["full"] } # async runtime

serde = { version = "1.0.163", features =["derive"]}
serde_json = "1.0.96"

tower = { version = "0.4.13", features = ["make"] } # networking
tower-http = { version = "0.4.0", features = ["trace"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}

[dependencies]
server.workspace = true

axum.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
tower.workspace = true