[package]
name = "client-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tokio.workspace = true
tower-http.workspace = true

tracing-subscriber.workspace = true

tower.workspace = true
hyper.workspace = true